--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
 	"printWidth": 80,
 	"useTabs": true,
 	"semi": true,
-	"singleQuote": true,
+	"singleQuote": false,
 	"jsxSingleQuote": true,
 	"trailingComma": "all",
 	"bracketSpacing": true,
