--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-	"name": "front-end",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-scripts": "3.0.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"lint": "eslint src",
-		"format": "yarn prettier -- --write",
-		"prettier": "prettier \"**/*.+(js|jsx|json|css|md|mdx)\"",
-		"validate": "yarn lint && yarn prettier -- --list-different"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged yarn validate"
-		}
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"babel-eslint": "^10.0.1",
-		"eslint": "^5.16.0",
-		"eslint-config-prettier": "^4.1.0",
-		"husky": "^2.0.0",
-		"lint-staged": "^8.1.5",
-		"prettier": "^1.17.0"
-	}
+  "name": "front-end",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "format": "yarn prettier -- --write",
+    "prettier": "prettier \"**/*.+(js|jsx|json|css|md|mdx)\"",
+    "validate": "yarn lint && yarn prettier -- --list-different"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged yarn validate"
+    }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "husky": "^2.0.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0"
+  }
 }
