--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
 {
-	"parser": "babel-eslint",
-	"parserOptions": {
-		"ecmaVersion": 2018
-	},
-	"extends": ["eslint:recommended", "airbnb", "eslint-config-prettier"],
-	"rules": {
-		"no-console": "off",
-		"no-unused-vars": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-	},
-	"env": {
-		"browser": true
-	}
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "extends": ["eslint:recommended", "airbnb", "eslint-config-prettier"],
+  "rules": {
+    "no-console": "off",
+    "no-unused-vars": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-one-expression-per-line": "off"
+  },
+  "env": {
+    "browser": true
+  }
 }
