--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "firebase": "^5.10.0",
+    "formik": "^1.5.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
