--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,7 @@
 	"rules": {
 		"no-console": "off",
 		"no-unused-vars": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"react/jsx-one-expression-per-line": "off"
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
 	},
 	"env": {
 		"browser": true
