--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/scheduler": "^0.3.0",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "moment": "^2.24.0"
   },
   "private": true
 }
