--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
-    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "twilio": "^3.30.2"
   },
   "private": true,
