--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "husky": "^2.0.0",
+    "jest-dom": "^3.1.3",
+    "react-testing-library": "^7.0.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0"
   }
