--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
+    "axios": "^0.18.0",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "fs": "^0.0.1-security",
     "moment-timezone": "^0.5.25",
     "twilio": "^3.30.2"
   },
