--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eslint-plugin-react": "^7.11.0",
     "firebase": "^5.10.0",
     "formik": "^1.5.2",
+    "moment-timezone": "^0.5.25",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
+    "react-slick": "^0.24.0",
     "styled-components": "^4.2.0",
     "yup": "^0.27.0"
   },
@@ -53,8 +55,8 @@
     "eslint-config-prettier": "^4.1.0",
     "husky": "^2.0.0",
     "jest-dom": "^3.1.3",
-    "react-testing-library": "^7.0.0",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "react-testing-library": "^7.0.0"
   }
 }
