--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "bootstrap": "^4.3.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -14,6 +15,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
+    "reactstrap": "^8.0.0",
     "styled-components": "^4.2.0",
     "yup": "^0.27.0"
   },
@@ -53,8 +55,8 @@
     "eslint-config-prettier": "^4.1.0",
     "husky": "^2.0.0",
     "jest-dom": "^3.1.3",
-    "react-testing-library": "^7.0.0",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "react-testing-library": "^7.0.0"
   }
 }
