--- a/.eslintrc
+++ b/.eslintrc
@@ -8,11 +8,12 @@
     "no-console": "off",
     "no-unused-vars": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/jsx-one-expression-per-line": "off", 
+    "react/jsx-one-expression-per-line": "off",
     "react/require-default-props": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/label-has-for": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/forbid-prop-types": "off"
   },
   "env": {
     "browser": true
