cloud function to charge cards with stripe☁

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/label-has-for": "off",
     "import/prefer-default-export": "off",
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    "no-shadow": "off"
   },
   "env": {
     "browser": true
