--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
     "jsx-a11y/label-has-for": "off",
     "import/prefer-default-export": "off",
     "react/forbid-prop-types": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "import/no-extraneous-dependencies": "off"
   },
   "env": {
     "browser": true
