--- a/functions/package.json
+++ b/functions/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
     "axios": "^0.18.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
     "moment-timezone": "^0.5.25",
     "request": "^2.88.0",
+    "stripe": "^6.31.1",
     "twilio": "^3.30.2"
   },
   "private": true,
