--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "firebase": "^5.10.0",
+    "firebase-admin": "^7.3.0",
+    "firebase-functions": "^2.3.0",
     "formik": "^1.5.2",
     "mdbreact": "^4.13.0",
     "moment-timezone": "^0.5.25",
@@ -17,8 +19,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
-    "reactstrap": "^8.0.0",
     "react-slick": "^0.24.0",
+    "react-stripe-checkout": "^2.6.3",
+    "reactstrap": "^8.0.0",
     "styled-components": "^4.2.0",
     "yup": "^0.27.0"
   },
