fixed CI hopefully

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
   - CI=false npm run build
 
 after_success:
-  - firebase deploy --token=${FIREBASE_API_TOKEN}
+  - firebase deploy --token "$FIREBASE_TOKEN"
