--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,10 @@ branches:
     - master
 
 before_script:
-  - yarn add firebase-tools
+  - npm install -g firebase-tools
 
 script:
   - CI=false npm run build
 
 after_success:
-  - firebase login
-  - y
-  - firebase deploy --token "$FIREBASE_TOKEN"
+  - firebase deploy --only hosting --token "$FIREBASE_TOKEN"
