--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-scripts": "3.0.0",
     "react-slick": "^0.24.0",
     "react-stripe-checkout": "^2.6.3",
