--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
