--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
     "eslint-config-airbnb": "^17.1.0",
