--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "firebase": "^5.10.0",
-    "firebase-admin": "^7.3.0",
-    "firebase-functions": "^2.3.0",
     "formik": "^1.5.2",
     "mdbreact": "^4.13.0",
     "moment-timezone": "^0.5.25",
@@ -20,6 +18,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
+    "react-loader-spinner": "^2.3.0",
     "react-scripts": "3.0.0",
     "react-slick": "^0.24.0",
     "react-stripe-checkout": "^2.6.3",
