added rule for descending-specificity

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "no-shadow": "off",
     "import/no-extraneous-dependencies": "off",
     "no-param-reassign": "off",
-    "no-return-assign": "off"
+    "no-return-assign": "off",
+    "no-descending-specificity": null
   },
   "env": {
     "browser": true
