--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,11 @@
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
     "moment-timezone": "^0.5.25",
-    "request": "^2.88.0",
     "stripe": "^6.31.1",
     "twilio": "^3.30.2"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
